feat: angular with wet in unix setup

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>WetAutomate</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>WetAutomate</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="gcwet/css/messages-ie.min.css" />
+    <link rel="stylesheet" href="gcwet/css/messages.min.css" />
+    <link rel="stylesheet" href="gcwet/css/theme-srv.min.css" />
+    <link rel="stylesheet" href="gcwet/css/theme.min.css" />
+    <link rel="stylesheet" href="gcwet/css/wet-boew.min.css" />
+    <link rel="icon" type="image/x-icon" href="gcwet/assets/favicon.ico" />
+
+    <script src="gcwet/js/jquery/2.2.4/jquery.js" defer></script>
+    <script src="gcwet/js/wet-boew.min.js" defer></script>
+    <script src="gcwet/js/theme.min.js" defer></script>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
